# rgbw-lighting

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md
.claude/skills/claude-ask/: SKILL.md
.claude/skills/claude-plan/: SKILL.md
.claude/skills/claude-review/: SKILL.md
.claude/skills/codex-ask/: SKILL.md
.claude/skills/codex-fix/: SKILL.md
.claude/skills/codex-implement/: SKILL.md
.claude/skills/codex-plan/: SKILL.md
.claude/skills/codex-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.github/workflows/: dashboard.yml  firmware.yml
apps/dj-booth/: partitions.csv  platformio.ini
apps/example-rgbw/: platformio.ini
apps/led-panel/: platformio.ini
docs/: audio-reactive.md  build-and-tooling.md  coding-standards.md  esp32-internals.md  led-control.md  pin-reference.md  power-and-wiring.md  project-roadmap.md
tools/dashboard/: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
tools/dashboard/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
tools/dashboard/src-tauri/capabilities/: default.json
tools/dashboard/src-tauri/icons/: icon.icns
tools/dashboard/src-tauri/src/: lib.rs  main.rs
tools/dashboard/src-tauri/src/commands/: apps.rs  config.rs  mod.rs  pio.rs  serial.rs
tools/dashboard/src-tauri/src/utils/: config_schema.rs  mod.rs  monorepo.rs  path_security.rs  pin_validator.rs  pio_parser.rs  pio_path.rs  profile_paths.rs
(+134 files in other folders)
