[package]
name = "rgbw-dashboard"
version = "0.1.0"
description = "RGBW Lighting Dashboard"
authors = ["rgbw-lighting"]
edition = "2021"

[lib]
name = "rgbw_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
serialport = "4.3"
configparser = "3"
dirs = "5.0"
uuid = { version = "1", features = ["v4"] }
regex = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
